--- a/Frontend/Styles/aboutPage.css
+++ b/Frontend/Styles/aboutPage.css
@@ -1,4 +1,3 @@
-/* Genel body stilleri */
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -7,11 +6,10 @@ body {
     flex-direction: column;
 }
 
-/* Ana içerik stilleri */
 .content {
     display: flex;
     flex-direction: column;
-    flex: 1; /* İçerik alanını esnek yaparak sayfanın kalanını doldur */
+    flex: 1; 
     padding: 20px;
     text-align: center;
     justify-content: center;
