--- a/Frontend/Styles/newListingPage.css
+++ b/Frontend/Styles/newListingPage.css
@@ -1,25 +1,22 @@
-/* CSS rules are kept repetitive so that you can get CSS rules for each button easily :) */
 .container {
     display: flex;
     flex: 1;
     width: 100%;
 }
 
-/* Full-height left column */
 .left {
     align-content: center;
     justify-items: center;
-    width: 30%; /* Adjust as needed */
+    width: 30%; 
     padding: 30px;
 }
 
 .form-section {
     width: 100%;
-    display: flex; /* Make this a flex container */
+    display: flex; 
     justify-content: space-between;
 }
 
-/* Middle section */
 .middle {
     align-content: center;
     justify-items: center;
@@ -27,7 +24,6 @@
     width: 50%;
 }
 
-/* Right section */
 .right {
     align-content: center;
     justify-items: center;
@@ -79,6 +75,6 @@ p{
 
 .features-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Two columns, equally spaced */
+    grid-template-columns: repeat(2, 1fr);
     gap: 5px;
 }
